@@ -307,9 +307,10 @@ search_extension( IN const char *extension,
  *	 0 - On Sucess
  *	 UPNP_E_OUTOF_MEMORY - on memory allocation failures
  ************************************************************************/
-UPNP_INLINE int
-get_content_type( IN const char *filename,
-                  OUT DOMString * content_type )
+static UPNP_INLINE int
+get_content_type(
+	IN const char *filename,
+	OUT DOMString *content_type)
 {
     const char *extension;
     const char *type;
